# fastqtk

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
debug/: Makefile  a.out  config.h  config.status  test.c  test.fastq  test.stat.base.1  test.stat.base.2  test.stat.length.2  test.stat.qual.1  test.stat.qual.2
debug/include/: config.h
debug/lib/fastq/: Makefile  config.h  config.status  libtool
debug/lib/fastq/src/: Makefile  barcode.lo  fastq.lo  libfastq.la  quality_system.lo
debug/lib/fastq/src/.deps/: barcode.Plo  fastq.Plo  quality_system.Plo
debug/lib/fastq/src/.libs/: libfastq.la  libfastq.lai  libfastq.so.0.0.0
debug/lib/program_options/: Makefile  config.h  config.status  libtool
debug/lib/program_options/src/: Makefile  libprogram_options.la  program_options.lo
debug/lib/program_options/src/.deps/: program_options.Plo
debug/lib/program_options/src/.libs/: libprogram_options.la  libprogram_options.lai  libprogram_options.so.0  libprogram_options.so.0.0.0
debug/src/: Makefile  fastqtk
debug/src/.deps/: bcdist.Po  fastqtk.Po  filter.Po  stat.Po
include/: bcdist.h  filter.h  stat.h
src/: Makefile.am  Makefile.in  bcdist.c  fastqtk.c  filter.c  stat.c
